fix: modified text alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   border: 1px solid red;
 }
 
@@ -88,21 +88,21 @@ body:has(main #contact:target) .content-wrapper main {
   gap: 2rem;
 }
 
-.content-wrapper header .nav-links a {
+.content-wrapper header .header-container .nav-links a {
   text-decoration: none;
   color: white;
   transition: color 0.3s ease;
 }
 
-.content-wrapper header .nav-links a:hover {
-  color: #3498db;
+.content-wrapper header .header-container .nav-links a:hover {
+  color: gray;
 }
 
 .content-wrapper header .header-container .nav-links {
   display: flex;
   gap: 1.5rem;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 1rem;
 }
 
@@ -146,6 +146,7 @@ body:has(main #contact:target) .content-wrapper main {
 
 .content-wrapper main .projects-container .projects-list {
   list-style: none;
+  text-align: right;
 }
 
 .content-wrapper main .projects-container .projects-list a {
